# task_manager_using_crud

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  crud.py  database.py  main.py
backend/models/: project_model.py  task_model.py  user_model.py
backend/routers/: project_router.py  task_router.py  user_router.py
backend/schemas/: project_schema.py  task_schema.py  user_schema.py
frontend/: Dockerfile  app.py  dashboard_page.py  project_page.py  requirements.txt  task_page.py  user_page.py
